<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="OSD">OSD/INFO</string>
    <string name="Power">Power</string>
    <string name="Version">Version</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">DVLx</string>
    <string name="app_video_attrib">(c) copyright 2008, Blender Foundation / www.bigbuckbunny.org</string>
    <string name="back_quit_lock">再次按下“返回”可退出视频播放</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_resume">是否从上次播放到的位置继续播放？</string>
    <string name="copyright">2016 All Rights Reserved</string>
    <string name="encountered_error_message">"VLC 处理该媒体时发生错误。
请尝试刷新媒体库。"</string>
    <string name="encountered_error_title">回放错误</string>
    <string name="hardware_acceleration_error">硬件加速出错，正在切换为软件解码</string>
    <string name="hello_world">Hello world!</string>
    <string name="info">Info</string>
    <string name="invalid_location">无法播放位置 %1$s。</string>
    <string name="loading">@string/text_loading</string>
    <string name="ok">OK</string>
    <string name="phone">86-0510-81012344</string>
    <string name="play_from_start">从头播放</string>
    <string name="please_wait">请稍候…</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="recordoff">Stop</string>
    <string name="recordon">Record</string>
    <string name="resume_from_position">从上次播放到的位置继续</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">settings</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="takepic">Take Pic</string>
    <string name="text_about_us">About Us</string>
    <string name="text_default">--</string>
    <string name="text_frequency">%sMHZ</string>
    <string name="text_instructions">Instructions</string>
    <string name="text_loading">loading...</string>
    <string name="text_pic">Photo Mode</string>
    <string name="text_power">%sMW</string>
    <string name="text_version_code">Version</string>
    <string name="text_version_name">V%s</string>
    <string name="text_video">REC Mode</string>
    <string name="text_video_level">LEVEL%s</string>
    <string name="text_voltage">%sV</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="toast_net_error">net error</string>
    <string name="toast_permission_need">Photo permission denied by user, snapshot and video record need save picture or video into Photo album.</string>
    <string name="toast_pic_save_fail">Photo saving failed</string>
    <string name="toast_pic_save_success">Photo saved successfully</string>
    <string name="toast_record_start_fail">REC error</string>
    <string name="toast_save_fail">Save failed</string>
    <string name="toast_save_success">Save success</string>
    <string name="toast_video_save_fail">Record saving failed</string>
    <string name="toast_video_save_success">Record saving failed</string>
    <string name="uri">rtp://@:5004</string>
    <string name="versiontext">无锡人人航拍网络科技有限公司</string>
    <string name="web">http://www.gor2teck.com</string>
</resources>
