<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:id="@id/cl_more_info" android:background="@mipmap/home_more_bg" android:layout_width="248.0dip" android:layout_height="wrap_content" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
      xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_about_us" android:paddingTop="15.0dip" android:layout_width="80.0dip" android:layout_height="75.0dip" android:text="@string/text_about_us" android:drawableTop="@mipmap/home_about_us" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_instructions" android:paddingTop="15.0dip" android:layout_width="80.0dip" android:layout_height="75.0dip" android:text="@string/text_instructions" android:drawableTop="@mipmap/home_instructions" app:layout_constraintLeft_toRightOf="@id/tv_about_us" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_version_name" android:padding="4.0dip" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/text_version_name" app:layout_constraintBottom_toTopOf="@id/tv_version_code" app:layout_constraintLeft_toRightOf="@id/tv_instructions" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_version_code" android:padding="12.0dip" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/text_version_code" app:layout_constraintBottom_toBottomOf="@id/tv_about_us" app:layout_constraintLeft_toLeftOf="@id/tv_version_name" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="center_vertical" android:id="@id/tv_OSD" android:paddingLeft="20.0dip" android:layout_width="80.0dip" android:layout_height="40.0dip" android:text="@string/OSD" app:layout_constraintTop_toBottomOf="@id/tv_about_us" />
        <CheckedTextView android:gravity="center_vertical" android:id="@id/ctv_osd" android:background="@drawable/btn_on_off" android:layout_width="48.0dip" android:layout_height="24.0dip" android:layout_marginEnd="18.0dip" app:layout_constraintBottom_toBottomOf="@id/tv_OSD" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/tv_OSD" />
        <View android:background="@color/white_30" android:layout_width="240.0dip" android:layout_height="0.5dip" app:layout_constraintTop_toBottomOf="@id/tv_about_us" />
        <View android:background="@color/white_30" android:visibility="gone" android:layout_width="240.0dip" android:layout_height="0.5dip" app:layout_constraintTop_toBottomOf="@id/tv_OSD" />
        <android.support.constraint.ConstraintLayout android:id="@id/cl_pw" android:layout_width="fill_parent" android:layout_height="80.0dip" app:layout_constraintTop_toBottomOf="@id/tv_OSD">
            <View android:background="@color/white_30" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginRight="10.0dip" app:layout_constraintRight_toRightOf="parent" />
            <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="center_vertical" android:id="@id/tv_pw" android:paddingLeft="20.0dip" android:layout_width="80.0dip" android:layout_height="40.0dip" android:text="@string/Power" />
            <CheckedTextView android:textSize="12.0sp" android:textColor="@color/color_white" android:gravity="center_vertical" android:id="@id/ctv_pw_25" android:background="@drawable/selector_black_blue_corner_3" android:layout_width="60.0dip" android:layout_height="22.0dip" android:layout_marginRight="20.0dip" android:text="25mw" android:textAlignment="center" app:layout_constraintRight_toLeftOf="@id/ctv_pw_100" app:layout_constraintTop_toTopOf="@id/ctv_pw_100" />
            <CheckedTextView android:textSize="12.0sp" android:textColor="@color/color_white" android:gravity="center_vertical" android:id="@id/ctv_pw_100" android:background="@drawable/selector_black_blue_corner_3" android:layout_width="60.0dip" android:layout_height="22.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="18.0dip" android:text="100mw" android:textAlignment="center" android:layout_marginEnd="18.0dip" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <CheckedTextView android:textSize="12.0sp" android:textColor="@color/color_white" android:gravity="center_vertical" android:id="@id/ctv_pw_500" android:background="@drawable/selector_black_blue_corner_3" android:layout_width="60.0dip" android:layout_height="22.0dip" android:layout_marginTop="20.0dip" android:text="500mw" android:textAlignment="center" android:layout_marginEnd="18.0dip" app:layout_constraintLeft_toLeftOf="@id/ctv_pw_25" app:layout_constraintTop_toBottomOf="@id/ctv_pw_25" />
            <CheckedTextView android:textSize="12.0sp" android:textColor="@color/color_white" android:gravity="center_vertical" android:id="@id/ctv_pw_800" android:background="@drawable/selector_black_blue_corner_3" android:layout_width="60.0dip" android:layout_height="22.0dip" android:text="800mw" android:textAlignment="center" android:layout_marginEnd="18.0dip" app:layout_constraintLeft_toLeftOf="@id/ctv_pw_100" app:layout_constraintTop_toTopOf="@id/ctv_pw_500" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>